--- a/data.ipynb
+++ b/data.ipynb
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "aaf06d5e",
    "metadata": {},
    "outputs": [
@@ -1632,7 +1632,7 @@
     "    plt.figure()\n",
     "    plt.plot(y_test[target].values, label='Actual', marker='o')\n",
     "    plt.plot(y_pred[:, i], label='Predicted', marker='x')\n",
-    "    plt.title(f\"📈 Dự đoán {target} năm 2024\")\n",
+    "    plt.title(f\"Dự đoán {target} năm 2024\")\n",
     "    plt.xlabel(\"Time Step\")\n",
     "    plt.ylabel(\"Giá trị (scaled)\")\n",
     "    plt.legend()\n",
